# PenteraAssignment

./: .gitignore  Dockerfile  Dockerfile-multistage  Dockerfile-one-stage  README.md  pyproject.toml
.pyenv-python3.11/: pyvenv.cfg
app/: app.py
jenkins/: docker-compose.yaml
jenkins/pipeline_scripts/: build-app.groovy
test/: docker-compose.yaml
test/scripts/: Dockerfile  app_checker.py
